Fix spacing in header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,7 +34,11 @@ header {
   justify-content: space-between;
 }
 
-header img {
+.logo {
+  display: flex;
+  align-items: center;
+}
+.logo img {
   height: 1.5rem;
   margin-right: 1rem;
 }
@@ -135,6 +139,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin: 0 -2rem;
 }
 footer img {
   height: 1.5rem;
